--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,4 +3,4 @@ project(JavaCppTest1)
 
 set(CMAKE_CXX_STANDARD 23)
 
-add_executable(JavaCppTest1/cpp main.cpp)
+add_executable(JavaCppTest1 cpp/main.cpp)
