--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,4 +5,5 @@ set(CMAKE_CXX_STANDARD 23)
 
 add_executable(JavaCppTest1 cpp/main.cpp
         cpp/CInt.h
-        cpp/CInt.cpp)
+        cpp/CInt.cpp
+        cpp/main.cpp)
