--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,4 +6,7 @@ set(CMAKE_CXX_STANDARD 23)
 add_executable(JavaCppTest1 cpp/main.cpp
         cpp/CInt.h
         cpp/CInt.cpp
-        cpp/main.cpp)
+        cpp/main.cpp
+        cpp/main.cpp
+        cpp/CInt.h
+        cpp/CInt.cpp)
